--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "proxyquire-2",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Proxies import/require in order to allow overriding dependencies during testing.",
   "main": "index.js",
+  "types": "proxyquire.d.ts",
   "scripts": {
     "test": "mocha"
   },
